--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mustache-express": "^1.3.1",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
+    "@types/connect-flash": "0.0.37",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/mustache-express": "^1.2.1",
     "@types/node": "^16.7.4",
     "@types/sequelize": "^4.28.10"
