--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.12.1",
     "mustache-express": "^1.3.1",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/connect-flash": "0.0.37",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/express-validator": "^3.0.0",
     "@types/mustache-express": "^1.2.1",
     "@types/node": "^16.7.4",
     "@types/sequelize": "^4.28.10"
