--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express-validator": "^6.12.1",
     "mustache-express": "^1.3.1",
     "mysql2": "^2.3.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
@@ -22,6 +24,8 @@
     "@types/express-validator": "^3.0.0",
     "@types/mustache-express": "^1.2.1",
     "@types/node": "^16.7.4",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
     "@types/sequelize": "^4.28.10"
   },
   "scripts": {
