--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.6",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
     "mustache-express": "^1.3.1",
@@ -20,6 +21,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/connect-flash": "0.0.37",
     "@types/express": "^4.17.13",
+    "@types/express-mysql-session": "^2.1.3",
     "@types/express-session": "^1.17.4",
     "@types/express-validator": "^3.0.0",
     "@types/mustache-express": "^1.2.1",
